src/objects/Notify_Purchaser__c.object
<CustomObject>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <formula>Invoice__r.Email_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Notify Purchasers</relationshipLabel>
        <relationshipName>Notify_Purchasers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seller_Name__c</fullName>
        <label>Seller Name</label>
        <length>180</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notify Purchaser</label>
    <nameField>
        <displayFormat>NP-{000000}</displayFormat>
        <label>Notify Purchaser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notify Purchasers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>